fixed/bugs-post-and-get-categories
