# app/Http/Controllers/Api/UserController.php
@@ -4,23 +4,13 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 use Illuminate\Http\JsonResponse;
+use App\Models\User;
 
 class UserController extends Controller
 {
-/**
- * @OA\Get(
- *     path="/api/users",
- *     summary="Get list of users",
- *     tags={"Users"},
- *     @OA\Response(
- *         response=200,
- *         description="Successful operation"
- *     )
- * )
- */
-public function index()
-{
-    return User::all();
-}
+    public function index()
+    {
+        return User::all();
+    }
 
 }
